--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  intl: ^0.18.1
   flutter_native_splash: ^2.3.2
   flutter:
     sdk: flutter
