Finished task widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  flutter_slidable: ^3.0.0
   calendar_agenda: ^0.0.2+3
   intl: ^0.17.0
   flutter_native_splash: ^2.3.2
