--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   shared_preferences: ^2.2.1
   provider: ^6.0.5
   flutter_slidable: ^3.0.0
-  calendar_agenda: ^0.0.2+3
-  intl: ^0.17.0
   flutter_native_splash: ^2.3.2
+  date_picker_timeline: ^1.2.5
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
   cupertino_icons: ^1.0.2
 
@@ -27,6 +29,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/images/
