--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  firebase_core: ^2.16.0
+  cloud_firestore: ^4.9.2
   shared_preferences: ^2.2.1
   provider: ^6.0.5
   flutter_slidable: ^3.0.0
