--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  top_snackbar_flutter: ^3.1.0
   firebase_core: ^2.16.0
   cloud_firestore: ^4.9.2
   shared_preferences: ^2.2.1
